...
    android:id="@+id/rangespage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="clientgreenhouse.clientgreenhouseapp.RangesActivity">

    <Button
        android:id="@+id/homeButton2"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
...
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.064"
                app:srcCompat="@drawable/ic_temperature" />

            <Button
                android:id="@+id/updateTempButton"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_below="@+id/tempIcon"
                android:layout_centerHorizontal="true"
                android:text="UPDATE"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="106dp" />

            <TextView
                android:id="@+id/tempUpdateMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updateTempButton"
                android:layout_centerHorizontal="true" />

            <TextView
...

            <TextView
                android:id="@+id/tempCurrLowVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/updateTempButton"
                android:layout_alignLeft="@+id/tempNewLowVal"
                android:layout_alignStart="@+id/tempNewLowVal"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="18dp"
                android:text="00.00"
                android:textSize="20sp" />

...

            <TextView
                android:id="@+id/tempCurrUpperVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button"
                android:layout_alignEnd="@+id/tempNewUpperVal"
                android:layout_alignRight="@+id/tempNewUpperVal"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="00.00"
                android:textSize="20sp" />

...
                android:layout_alignStart="@+id/humidityCHBTitle"
                android:text="current high bound"
                tools:layout_editor_absoluteX="251dp"
                tools:layout_editor_absoluteY="38dp" />

            <EditText
                android:id="@+id/humidityNewUpperVal"
                android:layout_width="91dp"
                android:layout_height="45dp"
                android:layout_alignLeft="@+id/tempNewUpperVal"
                android:layout_alignStart="@+id/tempNewUpperVal"
                android:layout_alignTop="@+id/button5"
                android:ems="10"
...
                android:layout_below="@+id/humidityTitle"
                android:text="current low bound"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="38dp" />

            <EditText
                android:id="@+id/humidityNewLowVal"
                android:layout_width="91dp"
                android:layout_height="45dp"
                android:layout_alignLeft="@+id/tempNewLowVal"
                android:layout_alignStart="@+id/tempNewLowVal"
                android:layout_below="@+id/humidityCurrLowVal"
                android:ems="10"
...
                android:visibility="invisible" />

            <TextView
                android:id="@+id/humidityCurrUpperVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/updateHumidityButton"
                android:layout_alignLeft="@+id/tempCurrUpperVal"
                android:layout_alignStart="@+id/tempCurrUpperVal"
                android:text="00.00"
                android:textSize="20sp" />

            <TextView
...
                android:layout_marginTop="36dp"
                android:text="Humidity"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/updateLightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/lightTitle"
                android:layout_alignRight="@+id/lightTitle"
                android:layout_below="@+id/lightIcon"
                android:text="UPDATE" />
...
                android:layout_alignLeft="@+id/humidityIcon"
                android:layout_alignStart="@+id/humidityIcon"
                android:layout_below="@+id/lightTitle"
                app:srcCompat="@drawable/ic_light" />

            <EditText
                android:id="@+id/lightNewUpperVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/humidityNewUpperVal"
                android:layout_alignLeft="@+id/humidityNewUpperVal"
                android:layout_alignRight="@+id/humidityNewUpperVal"
                android:layout_alignStart="@+id/humidityNewUpperVal"
                android:layout_below="@+id/lightCurrUpperVal"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/lightNewLowVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/humidityNewLowVal"
                android:layout_alignLeft="@+id/humidityNewLowVal"
                android:layout_alignRight="@+id/humidityNewLowVal"
                android:layout_alignStart="@+id/humidityNewLowVal"
                android:layout_below="@+id/lightCurrLowVal"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/humidityUpdateMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/updateHumidityButton"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/lightUpdateMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updateLightButton"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
...
